# opoch-hash

./: .gitignore  ECONOMIC_IMPACT.md  PROOF_OF_COMPUTATION.md  README.md  SPECIFICATION.md  benchmark_report.json  pyproject.toml  soundness.json
opoch-poc-sha/rust-verifier/: CLOSURE_PLAN.md  Cargo.toml  FINAL_CLOSURE_PLAN.md  MATH.md  OPOCH_DEMO_DOC.md  README.md  foundry.toml
opoch-poc-sha/rust-verifier/announcement_pack/: FOUNDATION.md  receipt_chain.json  replay.sh  report.json
opoch-poc-sha/rust-verifier/announcement_pack/vectors/: field_test_vectors.json  keccak256_test_vectors.json  sha256_test_vectors.json
opoch-poc-sha/rust-verifier/audit_package/: security_analysis.md  soundness_total.json  specification.md
opoch-poc-sha/rust-verifier/audit_package/reproducibility/: build_instructions.txt  replay.sh  verifier_id.txt
opoch-poc-sha/rust-verifier/audit_package/test_vectors/: ed25519_vectors.json  poc_N_1024_stmt.json  poc_N_2048_stmt.json  poc_N_256_stmt.json  poc_N_512_stmt.json  poseidon_vectors.json  secp256k1_vectors.json  sha256_vectors.json
opoch-poc-sha/rust-verifier/benchmark_submissions/: PULL_REQUEST_TEMPLATE.md
opoch-poc-sha/rust-verifier/benchmark_submissions/berkeley_rdi/: README.md  config.json
opoch-poc-sha/rust-verifier/benchmark_submissions/zkbench/: README.md  opoch_benchmarks.json
opoch-poc-sha/rust-verifier/contracts/: OpochVerifier.sol
opoch-poc-sha/rust-verifier/contracts/test/: OpochVerifier.t.sol
opoch-poc-sha/rust-verifier/proofs/: poc_N_2K_stmt.json  poc_N_2K_y.hex  poc_N_4K_d0.hex  poc_N_4K_stmt.json  poc_N_4K_y.hex
opoch-poc-sha/rust-verifier/public_bundle/: README.md  environment.json  receipt_chain.json  replay.sh  report.json  soundness.json  verify_results.json
opoch-poc-sha/rust-verifier/public_bundle/public_bundle/: environment.json  report.json  verify_results.json
opoch-poc-sha/rust-verifier/public_bundle/vectors/: keccak_vectors.json  poc_N_1024_stmt.json  poc_N_2048_stmt.json  poc_N_256_stmt.json  poc_N_2K_proof.sha256  poc_N_2K_stmt.json  poc_N_4K_proof.sha256  poc_N_512_stmt.json
opoch-poc-sha/rust-verifier/sdk/js/: index.js
opoch-poc-sha/rust-verifier/sdk/rust/: lib.rs
opoch-poc-sha/rust-verifier/spec/: FOUNDATION.md  encoding.md  field_params.json  spec.md  spec_id.txt  tags.json
opoch-poc-sha/rust-verifier/spec/implementation_plan/: BENCHMARK_PLAN.md  CLOSURE_PLAN.md  FINAL_CLOSURE_PLAN.md  PLAN_POC_HASH.md  STATUS.md
opoch-poc-sha/rust-verifier/src/: adversarial_tests.rs  aggregation.rs  air.rs  air_bytewise.rs  analysis_main.rs  bench.rs  bench_full.rs  berkeley_bench.rs  berkeley_bench_main.rs  closure_benchmark.rs  cost_benchmarks.rs  cost_proof.rs  cost_tests.rs  delta_benchmarks.rs  e2e_main.rs  endtoend.rs  feasibility.rs  field.rs  fri.rs  generate_billion_proof.rs  generate_large_proof.rs  honest_benchmark.rs  lib.rs  main.rs  measure_proofs.rs  merkle.rs  meter.rs  proof.rs  prover.rs  real_zkbench_main.rs  real_zkbenchmarks.rs  receipt.rs  reference_verifier.rs  run_delta.rs  run_zkbenchmarks.rs  segment.rs  sequentiality.rs  sha256.rs  soundness.rs  transcript.rs  (+3 more)
opoch-poc-sha/rust-verifier/src/bigint/: add.rs  compare.rs  inverse.rs  limbs.rs  mod.rs  mul.rs  reduce.rs  sub.rs
opoch-poc-sha/rust-verifier/src/ed25519/: air.rs  eddsa.rs  field.rs  mod.rs  params.rs  point.rs  scalar_mul.rs
opoch-poc-sha/rust-verifier/src/keccak/: air.rs  chi.rs  constants.rs  hash.rs  iota.rs  mod.rs  rho_pi.rs  round.rs  state.rs  theta.rs
opoch-poc-sha/rust-verifier/src/lookup/: generate.rs  grand_product.rs  log_derivative.rs  mod.rs  tables.rs
opoch-poc-sha/rust-verifier/src/machines/: bigint.rs  ed25519.rs  keccak.rs  lookup.rs  mod.rs  poc_sha.rs  poseidon.rs  secp256k1.rs
opoch-poc-sha/rust-verifier/src/mixer/: mod.rs  sponge.rs  tags.rs
opoch-poc-sha/rust-verifier/src/poseidon/: air.rs  constants.rs  hash.rs  mod.rs  round.rs  sbox.rs
opoch-poc-sha/rust-verifier/src/secp256k1/: air.rs  ecdsa.rs  field.rs  mod.rs  params.rs  point.rs  scalar_mul.rs
opoch-poc-sha/rust-verifier/src/serpi/: mod.rs  (+3 more)
opoch-poc-sha/rust-verifier/vectors/: sha256_vectors.json
opoch-poc-sha/rust-verifier/zkbench_results/: bundle_info.json  fibonacci_opoch.csv  keccak_opoch.csv  plots_data.json  report.json  report.md  rsp_opoch.csv
opoch-poc-sha/rust-verifier/zkbench_results_full/: bundle_info.json  fibonacci_opoch.csv  keccak_opoch.csv  plots_data.json  report.json  report.md  rsp_opoch.csv
(+70 files in other folders)
