[package]
name = "opoch-poc-sha"
version = "1.0.0"
edition = "2021"
authors = ["OPOCH Team"]
description = "OPOCH-PoC-SHA: Proof of Computation for SHA-256 chains"
license = "MIT"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "verifier"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[[bin]]
name = "e2e"
path = "src/e2e_main.rs"

[[bin]]
name = "analysis"
path = "src/analysis_main.rs"

[[bin]]
name = "bench_full"
path = "src/bench_full.rs"

[[bin]]
name = "trillion_dollar_demo"
path = "src/trillion_dollar_demo.rs"

[[bin]]
name = "closure_benchmark"
path = "src/closure_benchmark.rs"

[[bin]]
name = "generate_billion_proof"
path = "src/generate_billion_proof.rs"

[[bin]]
name = "reference_verifier"
path = "src/reference_verifier.rs"

[[bin]]
name = "generate_large_proof"
path = "src/generate_large_proof.rs"

[[bin]]
name = "run_delta"
path = "src/run_delta.rs"

[[bin]]
name = "run_zkbenchmarks"
path = "src/run_zkbenchmarks.rs"

[[bin]]
name = "measure_proofs"
path = "src/measure_proofs.rs"

[[bin]]
name = "honest_benchmark"
path = "src/honest_benchmark.rs"

[[bin]]
name = "real_zkbench"
path = "src/real_zkbench_main.rs"

[[bin]]
name = "berkeley_bench"
path = "src/berkeley_bench_main.rs"

[[bin]]
name = "zkharness_bench"
path = "src/bin/zkharness_bench.rs"
